styles/global.scss
html,
body {
  padding: 0;
  margin: 0;

  // Color
  color: white;
  background-color: hsl(0deg 0% 10%);

  // Text
  font-family: "EB Garamond", serif, sans-serif;
}

a {
  text-decoration: none;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: normal;
  font-family: "EB Garamond", serif, sans-serif;
}

/* For Mobile */
@media screen and (max-width: 540px) {
  .pdfContainer{
      height: 700px;
      width: 100vw;
      overflow: scroll;
  }
}

/* For others */
@media screen and (min-width: 540px) {
  .pdfContainer{
      height: 700px;
      /* Center child horizontally*/
    margin-left: 120px;
      justify-content: center;
  }
  iframe{
    text-align: center;
    width: 50%;
    margin: 0 auto;
  }
}

